jenkins/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 50000
          name: agent
          protocol: TCP
        # resources:
        #   limits:
        #     cpu: 1000m
        #     memory: 1Gi
        #   requests:
        #     cpu: 500m
        #     memory: 512Mi
        # livenessProbe:
        #     httpGet:
        #       path: /login
        #       port: 8080
        #     initialDelaySeconds: 60
        #     timeoutSeconds: 5
        #     failureThreshold: 12
        # readinessProbe:
        #     httpGet:
        #        path: /login
        #        port: 8080
        #     initialDelaySeconds: 60
        #     timeoutSeconds: 5
        #     failureThreshold: 12
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        hostPath:
          path: /Users/xie/Workspaces/data/jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: kube-ops
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: web
    nodePort: 30002
  - port: 50000
    targetPort: 50000
    name: agent
