jenkins/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: kube-ops
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`jenkins.foo.org`)
    kind: Rule
    services:
    - name: jenkins
      port: 8080
